--- a/site/index.html
+++ b/site/index.html
@@ -74,8 +74,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="https://discord.gg/jyD5jn9Vpd" target="_blank">
-                            <em data-feather="users" width="18" height="18" class="mr-2"></em>
-                            Discord Server
+                            <em data-feather="book-open" width="18" height="18" class="mr-2"></em>
+                            Wiki
                         </a>
                     </li>
                 </ul>
