update wiki link

--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
                         <a class="nav-link page-scroll" href="#crowsworn">Crowsworn</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="https://discord.gg/jyD5jn9Vpd" target="_blank">
+                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="./wiki">
                             <em data-feather="book-open" width="18" height="18" class="mr-2"></em>
                             Wiki
                         </a>
