--- a/site/index.html
+++ b/site/index.html
@@ -100,7 +100,7 @@
                     Umineko
                     <em class="ml-2" data-feather="arrow-down"></em>
                 </a>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://discord.gg/jyD5jn9Vpd" target="_blank">
+                <a class="btn btn-info d-inline-flex flex-row align-items-center" href="https://discord.gg/jyD5jn9Vpd" target="_blank">
                     Discord Server
                     <em class="ml-2" data-feather="users"></em>
                 </a>
@@ -115,14 +115,14 @@
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Umineko Türkçe Çeviri Projesi</h2>
-                <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için GitHub'a göz atabilirsiniz.<br><br>~ A Golden Tale</p>
+                <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için sitenin Wiki kısmına göz atabilirsiniz.<br><br>~ A Golden Tale</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
                     GitHub
                     <em class="ml-2" data-feather="github"></em>
                 </a>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr/tree/master/INSTALLATION.md" target="_blank">
+                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/umineko/installation/">
                     Nasıl Kurulur?
-                    <em class="ml-2" data-feather="help-circle"></em>
+                    <em class="ml-2" data-feather="book-open"></em>
                 </a>
                 <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83m_JOZRS7cbnU5jZjJFt6ln" target="_blank">
                     YouTube Playlist
