--- a/site/index.html
+++ b/site/index.html
@@ -66,9 +66,6 @@
                     <!--<li class="nav-item">
                         <a class="nav-link page-scroll" href="#palecourt">Pale Court</a>
                     </li>-->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#blasphemous2">Blasphemous II</a>
-                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#crowsworn">Crowsworn</a>
                     </li>
@@ -113,7 +110,7 @@
 <section class="full-section bg-umineko" id="umineko">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 mx-auto text-center">
+            <div class="col-md-5 mx-auto text-center">
                 <h2 class="heading-black">Umineko Türkçe Çeviri Projesi</h2>
                 <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için sitenin Wiki kısmına göz atabilirsiniz.<br><br>~ A Golden Tale</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
@@ -121,7 +118,7 @@
                     <em class="ml-2" data-feather="github"></em>
                 </a>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/umineko/installation/">
-                    Nasıl Kurulur?
+                    Kurulum
                     <em class="ml-2" data-feather="book-open"></em>
                 </a>
                 <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83m_JOZRS7cbnU5jZjJFt6ln" target="_blank">
@@ -137,16 +134,16 @@
 <section class="full-section bg-higurashi" id="higurashi">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 mx-auto text-center">
+            <div class="col-md-5 mx-auto text-center">
                 <h2 class="heading-black">Higurashi Türkçe Çeviri</h2>
                 <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için GitHub'a göz atabilirsiniz.</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr" target="_blank">
                     GitHub
                     <em class="ml-2" data-feather="github"></em>
                 </a>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr#kurulum" target="_blank">
-                    Nasıl Kurulur?
-                    <em class="ml-2" data-feather="help-circle"></em>
+                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/higurashi/installation/">
+                    Kurulum
+                    <em class="ml-2" data-feather="book-open"></em>
                 </a>
                 <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83mjDVNjVaUGc_-FjWD4SKAK" target="_blank">
                     YouTube Playlist
@@ -188,25 +185,6 @@
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/hollow-knight-tr#kurulum" target="_blank">
                     Nasıl Kurulur?
                     <em class="ml-2" data-feather="help-circle"></em>
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
--->
-
-
-<!-- blasphemous2 section -->
-<!--
-<section class="full-section bg-blasphemous2" id="blasphemous2">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center">
-                <h2 class="heading-black">Blasphemous II<br>Türkçe Çeviri</h2>
-                <p class="text-muted lead">Yakında</p>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://store.steampowered.com/app/2114740/" target="_blank">
-                    Steam Sayfası
-                    <em class="ml-2" data-feather="external-link"></em>
                 </a>
             </div>
         </div>
