--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -4,3 +4,11 @@
   {{ super() }}
   <!-- bonus content -->
 {% endblock %}
+
+{% block extrahead %}
+<meta content="Witch Love Wiki" property="og:title" />
+<meta content="Sevgiyle çeviri" property="og:description" />
+<meta content="https://witch-love.github.io" property="og:url" />
+<meta content="https://witch-love.github.io/img/embedimage.jpg" property="og:image" />
+<meta content="#ECD246" data-react-helmet="true" name="theme-color" />
+{% endblock %}
