--- a/site/index.html
+++ b/site/index.html
@@ -110,21 +110,24 @@
 <section class="full-section bg-umineko" id="umineko">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 mx-auto text-center">
+            <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Umineko Türkçe Çeviri Projesi</h2>
-                <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için sitenin Wiki kısmına göz atabilirsiniz.<br><br>~ A Golden Tale</p>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
-                    GitHub
-                    <em class="ml-2" data-feather="github"></em>
-                </a>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/umineko/installation/">
-                    Kurulum
-                    <em class="ml-2" data-feather="book-open"></em>
-                </a>
-                <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83m_JOZRS7cbnU5jZjJFt6ln" target="_blank">
-                    YouTube Playlist
-                    <em class="ml-2" data-feather="youtube"></em>
-                </a>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes istediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.<br><br>~ A Golden Tale</p>
+                <div class="col-md-8 mx-auto">
+                    <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
+                        GitHub
+                        <em class="ml-2" data-feather="github"></em>
+                    </a>
+                    <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/umineko/installation/">
+                        Kurulum
+                        <em class="ml-2" data-feather="chevron-right"></em>
+                    </a>
+                    <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83m_JOZRS7cbnU5jZjJFt6ln" target="_blank">
+                        YouTube Playlist
+                        <em class="ml-2" data-feather="youtube"></em>
+                    </a>
+                </div>
+                
             </div>
         </div>
     </div>
@@ -134,21 +137,23 @@
 <section class="full-section bg-higurashi" id="higurashi">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 mx-auto text-center">
+            <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Higurashi Türkçe Çeviri</h2>
-                <p class="text-muted lead">Bu proje herkese açıktır ve isteyen herkes istediği zaman katkıda bulunabilmektedir. Detaylı bilgi için GitHub'a göz atabilirsiniz.</p>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr" target="_blank">
-                    GitHub
-                    <em class="ml-2" data-feather="github"></em>
-                </a>
-                <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/higurashi/installation/">
-                    Kurulum
-                    <em class="ml-2" data-feather="book-open"></em>
-                </a>
-                <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83mjDVNjVaUGc_-FjWD4SKAK" target="_blank">
-                    YouTube Playlist
-                    <em class="ml-2" data-feather="youtube"></em>
-                </a>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes istediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.</p>
+                <div class="col-md-8 mx-auto">
+                    <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr" target="_blank">
+                        GitHub
+                        <em class="ml-2" data-feather="github"></em>
+                    </a>
+                    <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="./wiki/higurashi/installation/">
+                        Kurulum
+                        <em class="ml-2" data-feather="chevron-right"></em>
+                    </a>
+                    <a class="btn btn-danger d-inline-flex flex-row align-items-center" href="https://youtube.com/playlist?list=PLOxBDkucq83mjDVNjVaUGc_-FjWD4SKAK" target="_blank">
+                        YouTube Playlist
+                        <em class="ml-2" data-feather="youtube"></em>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -158,7 +163,7 @@
 <section class="full-section bg-silksong" id="silksong">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 text-center" style="margin-left: auto;">
+            <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Hollow Knight: Silksong Türkçe Çeviri</h2>
                 <p class="text-muted lead">Yakında</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://store.steampowered.com/app/1030300/" target="_blank">
