--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -16,7 +16,7 @@
 {% block extrahead %}
 <meta content="Witch Love Wiki" property="og:title" />
 <meta content="Sevgiyle çeviri" property="og:description" />
-<meta content="https://witch-love.github.io" property="og:url" />
-<meta content="https://witch-love.github.io/img/embedimage.jpg" property="og:image" />
+<meta content="https://witch-love.com" property="og:url" />
+<meta content="https://witch-love.com/img/embedimage.jpg" property="og:image" />
 <meta content="#ECD246" data-react-helmet="true" name="theme-color" />
 {% endblock %}
