--- a/site/index.html
+++ b/site/index.html
@@ -21,8 +21,8 @@
     <meta name="google-site-verification" content="b0GJGvEckT-H4Sv6JTzZHcISdmRVTMEffbBqlPYzS-c" />
     <meta content="Witch Love Çeviri" property="og:title" />
     <meta content="Sevgiyle çeviri" property="og:description" />
-    <meta content="https://witch-love.github.io" property="og:url" />
-    <meta content="https://witch-love.github.io/img/embedimage.jpg" property="og:image" />
+    <meta content="https://witch-love.com" property="og:url" />
+    <meta content="https://witch-love.com/img/embedimage.jpg" property="og:image" />
     <meta content="#ECD246" data-react-helmet="true" name="theme-color" />
 
     <link rel="icon" type="image/png" href="img/favicon.png">
