--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Witch Love Çeviri</title>
     <meta name="description"
-          content="Sevdiğimiz ve saygı duyduğumuz Türkçe olmayan içerikleri (Umineko başta olmak üzere) büyük bir sevgiyle Türkçe'ye çeviriyoruz."/>
+          content="Umineko başta olmak üzere, sevgi ve saygı duyduğumuz Türkçe olmayan eserleri büyük bir özenle Türkçe'ye çevirerek daha fazla insana ulaştırabilmeyi amaçlıyoruz."/>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9MFM5S3BH"></script>
@@ -41,10 +41,10 @@
 <body>
 
 <!--navigation-->
-<section class="smart-scroll">
+<section class="smart-scroll" id="nav">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
-            <a class="navbar-brand heading-black" href="index.html">
+            <a class="navbar-brand heading-black page-scroll" href="#home">
                 Witch Love
             </a>
             <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
@@ -92,13 +92,13 @@
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
                 <h1 class="heading-black text-capitalize">Witch Love Çeviri</h1>
-                <p class="lead py-3">Sevdiğimiz ve saygı duyduğumuz Türkçe olmayan içerikleri<br>(Umineko başta olmak üzere) sevgiyle Türkçe'ye çeviriyoruz.</p>
+                <p class="lead py-3">Umineko başta olmak üzere, sevgi ve saygı duyduğumuz Türkçe olmayan eserleri büyük bir özenle Türkçe'ye çevirerek daha fazla insana ulaştırabilmeyi amaçlıyoruz.</p>
                 <a class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll" href="#umineko">
                     Umineko
                     <em class="ml-2" data-feather="arrow-down"></em>
                 </a>
                 <a class="btn btn-info d-inline-flex flex-row align-items-center" href="https://discord.gg/jyD5jn9Vpd" target="_blank">
-                    Discord Server
+                    Discord'a Katıl
                     <em class="ml-2" data-feather="users"></em>
                 </a>
             </div>
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Umineko Türkçe Çeviri Projesi</h2>
-                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes istediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.<br><br>~ A Golden Tale</p>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.<br><br>~ A Golden Tale</p>
                 <div class="col-md-8 mx-auto">
                     <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
                         GitHub
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Higurashi Türkçe Çeviri</h2>
-                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes istediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.</p>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.</p>
                 <div class="col-md-8 mx-auto">
                     <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr" target="_blank">
                         GitHub
@@ -165,7 +165,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Hollow Knight: Silksong Türkçe Çeviri</h2>
-                <p class="text-muted lead">Yakında</p>
+                <p class="text-muted lead">Yakında...</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://store.steampowered.com/app/1030300/" target="_blank">
                     Steam Sayfası
                     <em class="ml-2" data-feather="external-link"></em>
@@ -203,7 +203,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
                 <h2 class="heading-black">Crowsworn<br>Türkçe Çeviri</h2>
-                <p class="text-muted lead">Yakında</p>
+                <p class="text-muted lead">Yakında...</p>
                 <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://store.steampowered.com/app/1614330/" target="_blank">
                     Steam Sayfası
                     <em class="ml-2" data-feather="external-link"></em>
