Add refs to contributing wikis

--- a/site/index.html
+++ b/site/index.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Umineko Türkçe Çeviri Projesi</h2>
-                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.<br><br>~ A Golden Tale</p>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <a href="https://witch-love.com/wiki/umineko/contributing/info/"><b>wiki</b></a> sayfamıza göz atabilirsiniz.<br><br>~ A Golden Tale</p>
                 <div class="col-md-8 mx-auto">
                     <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/umineko-scripting-tr" target="_blank">
                         GitHub
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h2 class="heading-black">Higurashi Türkçe Çeviri</h2>
-                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <b>wiki</b> sayfamıza göz atabilirsiniz.</p>
+                <p class="text-muted lead">Bu çeviri projemiz açık kaynaktır ve isteyen herkes dilediği zaman katkıda bulunabilir! Detaylı bilgi için <a href="https://witch-love.com/wiki/higurashi/contributing/info/"><b>wiki</b></a> sayfamıza göz atabilirsiniz.</p>
                 <div class="col-md-8 mx-auto">
                     <a class="btn btn-gray d-inline-flex flex-row align-items-center" href="https://github.com/Witch-Love/higurashi-scripting-tr" target="_blank">
                         GitHub
