--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -1,16 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-  {% if page and page.meta and page.meta.status and page.meta.status == 'draft' %}
-    <details class="draft" open="open">
-      <summary>Taslak</summary>
-      <p>Bu sayfa, içeriği henüz tamamlanmamış olduğundan taslak bir sayfadır.<br />
-      Buranın gereğinden uzun bir süredir taslak olarak kaldığını düşünüyorsanız bizimle iletişime geçebilirsiniz.</p>
-    </details>
-    <hr />
+  {% if page %}
+    {% set split_content = super().split('</h1>', 1) %}
+    {{ split_content[0] + '</h1>' }}
+    <pagecontent>
+    {% if page.meta and page.meta.status and page.meta.status == 'draft' %}
+      <details class="draft" style="margin: -2em 0 4em;">
+        <summary>Taslak Sayfa</summary>
+        <p style="font-family: monospace;">Bu sayfanın içeriği henüz tamamlanmamıştır ve içerik düzenlemeleri devam etmektedir.<br />
+        Buranın gereğinden uzun taslak olarak kaldığını düşünüyorsanız bizimle <a href="{{ config.site_url | e }}contact/">iletişime</a> geçin.</p>
+      </details>
+    {% elif page.meta and page.meta.status and page.meta.status == 'deprecated' %}
+      <details class="danger" open="open" style="margin: -2em 0 4em;">
+        <summary>Kullanım Dışı Sayfa</summary>
+        <p><b>Bu sayfa kullanımdan kaldırılmıştır ve burada yazanlar muhtemelen doğru veya güncel değildir!</b></p>
+      </details>
+    {% endif %}
+    <hr style="margin: -2em 0 2em;">
+    {{ split_content[1] }}
+    </pagecontent>
+  {% else %}
+    {{ super() }}
   {% endif %}
-  {{ super() }}
   <!-- bonus content -->
+  <div id="modalElement" class="modal">
+    <span id="modalClose" class="close">&times;</span>
+    <img id="modalImage" class="modal-content" />
+    <div id="modalCaption"></div>
+  </div>
 {% endblock %}
 
 {% block extrahead %}
