--- a/mkdocs/overrides/404.html
+++ b/mkdocs/overrides/404.html
@@ -1,6 +1,12 @@
 {% extends "main.html" %}
 
 {% block content %}
+	<style>
+		.md-grid {
+			max-width: 1440px; 
+		}
+	</style>
+
 	<h1>404 - Sayfa Bulunamadı</h1>
 	<hr style="margin: -2em 0 3em;">
 	<div class="admonition warning" style="margin: -2em 0 2em;">
