--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -37,7 +37,7 @@
     <meta property="og:description" content="{{ page.meta.description | default(config.site_description) | e }}" />
     <meta property="og:url" content="{{ config.site_url | e }}{{ page.url | e }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{ page.meta.image | default('https://witch-love.com/img/embedimage.jpg') | e }}" />
+    <meta property="og:image" content="{{ page.meta.image | default('https://witch-love.com/img/embed.jpg') | e }}" />
     <meta property="og:locale" content="tr_TR" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta name="theme-color" content="{{ page.meta.color | default('#ecd246') | e }}" />
