--- a/mkdocs/overrides/main.html
+++ b/mkdocs/overrides/main.html
@@ -24,7 +24,7 @@
 			{% if page.meta.status == 'draft' %}
 				<details class="draft" style="margin: -2em 0 4em;" open>
 					<summary>Taslak Sayfa</summary>
-					<p style="font-family: monospace;"><b>Bu sayfanın içeriği henüz tamamlanmamıştır ve düzenlemeleri devam etmektedir.</b>
+					<p style="font-family: monospace;"><b>Bu sayfa henüz tamamlanmamıştır ve içerik düzenlemeleri devam etmektedir.</b>
 				</details>
 			{% elif page.meta.status == 'deprecated' %}
 				<details class="danger" style="margin: -2em 0 4em;" open>
