--- a/mkdocs/overrides/start.html
+++ b/mkdocs/overrides/start.html
@@ -105,7 +105,12 @@
 			background-color: rgba(0, 0, 0, 0.65);
 		}
 
+		html {
+			scroll-snap-type: y proximity;
+		}
+
 		section {
+			scroll-snap-align: center;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -124,14 +129,18 @@
 		}
 
 		section:not(.header) {
-			margin-left: 5%;
 			opacity: 0;
+			scale: 0.9;
 			animation: fade-in linear forwards;
-			animation-timeline: view(100% 40%);
+			animation-timeline: view();
+			animation-range: entry;
 		}
 
 		@keyframes fade-in {
-			to {margin-left: 0%; opacity: 1;}
+			to {
+				scale: 1;
+				opacity: 1;
+			}
 		}
 
 		h2 {
