--- a/mkdocs/overrides/redirect.html
+++ b/mkdocs/overrides/redirect.html
@@ -1,5 +1,17 @@
 {% extends "main.html" %}
 
+{% block site_meta %}
+	{%- if page.meta -%}
+		{%- set split_content = super().split('<link rel="icon" href="') -%}
+		{{ split_content[0] }}
+		{%- set split_content = split_content[1].split('">', 1) -%}
+		<link rel="icon" href="{{ page.meta.favicon_url | default(config.theme.favicon) | url }}">
+		{%- for content in split_content[1:] -%}
+			{{ content }}
+		{%- endfor -%}
+	{%- endif -%}
+{% endblock %}
+
 {% block extrahead %}
 	{{ super() }}
 	{% if page %}
