--- a/mkdocs/overrides/start.html
+++ b/mkdocs/overrides/start.html
@@ -244,7 +244,7 @@
 				<a href="{{ config.site_url | e }}umineko" class="home-button yellow">
 					UMINEKO <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right ml-2"><polyline points="9 18 15 12 9 6"></polyline></svg>
 				</a>
-				<a href="https://discord.gg/jyD5jn9Vpd" class="home-button blue" target="_blank">
+				<a href="{{ config.site_url | e }}discord" class="home-button blue" target="_blank">
 					DISCORD'A KATIL <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users ml-2"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
 				</a>
 			</div>
