--- a/mkdocs/overrides/start.html
+++ b/mkdocs/overrides/start.html
@@ -270,30 +270,36 @@
 		<div class="container">
 			<h2>Higurashi Türkçe Çeviri</h2>
 			<p class="text">Hinamizawa adında sakin bir köy...</p>
-			<a href="{{ config.site_url | e }}higurashi" class="home-button gray">
-				SAYFAYA GIT <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right ml-2"><polyline points="9 18 15 12 9 6"></polyline></svg>
-			</a>
-			<a href="https://youtube.com/playlist?list=PLOxBDkucq83mjDVNjVaUGc_-FjWD4SKAK" class="home-button red" target="_blank">
-				YOUTUBE PLAYLIST <svg style="margin-left: 0.4rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube ml-2"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
-			</a>
+			<div class="row">
+				<a href="{{ config.site_url | e }}higurashi" class="home-button gray">
+					SAYFAYA GIT <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right ml-2"><polyline points="9 18 15 12 9 6"></polyline></svg>
+				</a>
+				<a href="https://youtube.com/playlist?list=PLOxBDkucq83mjDVNjVaUGc_-FjWD4SKAK" class="home-button red" target="_blank">
+					YOUTUBE PLAYLIST <svg style="margin-left: 0.4rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube ml-2"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
+				</a>
+			</div>
 		</div>
 	</section>
 	<section class="md-typeset silksong">
 		<div class="container">
 			<h2>Hollow Knight: Silksong Türkçe Çeviri</h2>
 			<p class="text">Yakında...</p>
-			<a href="https://store.steampowered.com/app/1030300" class="home-button gray" target="_blank">
-				STEAM SAYFASI <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link ml-2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
-			</a>
+			<div class="row">
+				<a href="{{ config.site_url | e }}silksong" class="home-button gray">
+					SAYFAYA GIT <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right ml-2"><polyline points="9 18 15 12 9 6"></polyline></svg>
+				</a>
+			</div>
 		</div>
 	</section>
 	<section class="md-typeset crowsworn">
 		<div class="container">
 			<h2>Crowsworn Türkçe Çeviri</h2>
 			<p class="text">Yakında...</p>
-			<a href="https://store.steampowered.com/app/1614330" class="home-button gray" target="_blank">
-				STEAM SAYFASI <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link ml-2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
-			</a>
+			<div class="row">
+				<a href="https://store.steampowered.com/app/1614330" class="home-button gray" target="_blank">
+					STEAM SAYFASI <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link ml-2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
+				</a>
+			</div>
 		</div>
 	</section>
 {% endblock %}
