--- a/mkdocs/overrides/start.html
+++ b/mkdocs/overrides/start.html
@@ -283,7 +283,7 @@
 	<section class="md-typeset silksong">
 		<div class="container">
 			<h2>Hollow Knight: Silksong Türkçe Çeviri</h2>
-			<p class="text">Yakında...</p>
+			<p class="text">Oyun 4 Eylül'de çıkıyor!<br>Çeviri detayları için sayfamıza göz atın.</p>
 			<div class="row">
 				<a href="{{ config.site_url | e }}silksong" class="home-button gray">
 					SAYFAYA GIT <svg style="margin-left: 0.2rem !important;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right ml-2"><polyline points="9 18 15 12 9 6"></polyline></svg>
